<resources>
    <string name="app_name">Brain App</string>
    <string name="low_level">Младшеклассник</string>
    <string name="middle_level">Старшеклассник</string>
    <string name="high_level">Студент</string>
    <string name="start">start</string>
    <string name="level">level</string>
    <string name="right">rightsNumber</string>
    <string name="wrong">wrongs number</string>
    <string name="your_level">Ваш Уровень</string>
    <string name="congrate">Поздравляем!</string>
    <string name="congratenewrecord">Новый рекорд: </string>
    <string name="victory_score">Победный: </string>
    <string name="victory">Вы победили!</string>
</resources>